# leggedRobot

./: .gitignore  README.md
src/: README.md
src/bullet_sims/: CMakeLists.txt  package.xml
src/bullet_sims/scripts/: t21.py  t22.py  t23.py  t2_temp.py  t3_marker.py  t3_simulation.py  t4_01_standing.py  t4_02_one_leg_stand.py  t4_03_squating.py  t4_conf.py  t4_tsid_wrapper.py  test copy.py  test.py
src/reemc/hey5_description/urdf/: hey5_hand.urdf.xacro
src/reemc/reemc_bringup/launch/: reemc_bringup.launch
src/reemc/reemc_description/robots/: reemc.urdf
src/reemc/reemc_description/test/: test_reemc_lower_body.test
src/ros_visuals/: CMakeLists.txt  package.xml
src/ros_visuals/launch/: t11.launch  t12.launch  t13.launch  t3.launch  t31.launch  talos_rviz.launch  test.launch
src/ros_visuals/rviz/: t11_config.rviz  t12_config.rviz  t13_config.rviz  t3_config.rviz  talos.rviz  test.rviz
src/ros_visuals/scripts/: t11.py  t12.py  t13.py  test.py
src/simulator/: CMakeLists.txt  README.md  package.xml  setup.py
src/simulator/src/simulator/: body.py
src/talos/talos_bringup/launch/: talos_bringup.launch
src/talos/talos_description/: CMakeLists.txt
walking/: README.md  walking.py
walking/pybullet_wrapper/simulator/: robot.py
walking/simple_walking/modules/: foot_trajectory.py  foot_trajectory1.py  footstep_planner.py  lip_mpc.py  mpc_lipm_2ord.py
walking/simple_walking/robots/: robot.py  talos.py  talos_conf.py
walking/simple_walking/wbc/: t4_tsid_wrapper.py  tsid_wrapper.py
walking/talos/talos_bringup/config/: rviz.rviz
